# filet-pattern

./: TODO.txt
backend/: .gitignore  AGENTS.md  API_CONTRACT.md  ARCHITECTURE.md  DOMAIN.md  GENERATION_RULES.md  PRODUCT_REQUIREMENTS.md  README.md  TASKS.md  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: health.py
backend/app/api/schemas/: health.py  schemes.py
backend/app/domain/services/: health_service.py
backend/app/infrastructure/glyphs/: __init__.py
backend/tests/integration/: test_health.py
backend/tools/glyph_import/: AGENTS.md  README.md  TASKS.md  pyproject.toml
backend/tools/glyph_import/docs/: extraction_contract.md
backend/tools/glyph_import/src/: config.py  main.py
backend/tools/glyph_import/src/domain/: models.py
backend/tools/glyph_import/src/pipelines/: extraction_pipeline.py  import_pipeline.py
backend/tools/glyph_import/src/services/: cell_classifier.py  cell_extractor.py  export_service.py  glyph_builder.py  grid_detector.py  image_loader.py  image_preprocessor.py  matrix_builder.py  preview_service.py  symbol_extractor.py
backend/tools/glyph_import/src/utils/: json_utils.py  logging_utils.py
backend/tools/glyph_import/tests/integration/: test_import_pipeline.py
backend/tools/glyph_import/tests/unit/: test_cell_classifier.py  test_cell_extractor.py  test_config.py  test_export_service.py  test_extraction_pipeline.py  test_glyph_builder.py  test_grid_detector.py  test_image_loader.py  test_image_preprocessor.py  test_main.py  (+4 more)
backend/tools/glyph_import/tmp_man/: manifest.json
(+124 files in other folders)
