[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filet-pattern-backend"
version = "0.1.0"
description = "Backend for filet knitting pattern generation."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = [
    "app",
    "app.api",
    "app.api.routes",
    "app.api.schemas",
    "app.core",
    "app.domain",
    "app.domain.models",
    "app.domain.rules",
    "app.domain.services",
    "app.infrastructure",
    "app.infrastructure.glyphs",
]
